2023-12-24T00:44:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7311449208 # 4388
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-24
* notice: query file size: 24476
* notice: accum prev / next / diff: re vi: 0 221 / 0 223 / +0 +2

2023-12-23T12:14:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7308142834 # 4385
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-23
* notice: query file size: 24332
* notice: accum prev / next / diff: re vi: 0 219 / 0 221 / +0 +2

2023-12-22T04:11:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7296114575 # 4377
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-22
* notice: query file size: 24313
* notice: accum prev / next / diff: re vi: 0 217 / 0 219 / +0 +2

2023-12-21T00:41:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7282469318 # 4370
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-21
* notice: query file size: 24327
* notice: accum prev / next / diff: re vi: 0 215 / 0 217 / +0 +2

2023-12-20T20:09:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7280285852 # 4369
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
* notice: query file size: 24309
* notice: accum prev / next / diff: re vi: 0 213 / 0 215 / +0 +2

2023-12-20T04:09:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7270865685 # 4365